// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the Product component When it is rendered with a valid product object and the user has already given feedback as broken Then the SnapShot should match the rendered tree 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#23485D",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <MockedComponent />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#152B38",
        "borderRadius": 5,
        "elevation": 8,
        "height": "79%",
        "marginTop": "2%",
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4.65,
        "width": "95%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C1C1C",
          "borderRadius": 5,
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 23,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "borderRadius": 4,
            "height": 125,
            "marginRight": "5%",
            "width": 125,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#152B38",
            "flexDirection": "column",
            "marginLeft": "5%",
            "width": "35%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "hsl(100,100%,75%)",
              "fontFamily": "RobotoBold",
              "fontSize": 60,
              "paddingBottom": 5,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "hsl(100,100%,75%)",
              "fontFamily": "RobotoBold",
              "fontSize": 15,
            }
          }
        >
          Obsoletion
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "position": "relative",
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#23485D",
            "height": 3,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "hsl(100,100%,75%)",
            "borderRadius": 50,
            "height": 20,
            "left": "undefined%",
            "position": "absolute",
            "width": 20,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C1C1C",
          "borderRadius": 5,
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          1
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
           Owners
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          -
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          0
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
           Ex-Owners
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 5,
            "width": "75%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            Battery dead
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            40.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            5.50 Years
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            Screen broke
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            20.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            31.02 Years
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            New reason
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            20.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            0.00 Years
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            New reason 2
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            20.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            0.00 Years
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C1C1C",
          "borderRadius": 5,
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFC4C4",
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
            "textAlign": "center",
          }
        }
      >
        You are already an exowner of this device
      </Text>
    </View>
  </View>
</View>
`;

exports[`Given the Product component When it is rendered with a valid product object and the user has already given feedback but no as broken Then the SnapShot should match the rendered tree 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#23485D",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <MockedComponent />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#152B38",
        "borderRadius": 5,
        "elevation": 8,
        "height": "79%",
        "marginTop": "2%",
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4.65,
        "width": "95%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C1C1C",
          "borderRadius": 5,
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 23,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "borderRadius": 4,
            "height": 125,
            "marginRight": "5%",
            "width": 125,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#152B38",
            "flexDirection": "column",
            "marginLeft": "5%",
            "width": "35%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "hsl(100,100%,75%)",
              "fontFamily": "RobotoBold",
              "fontSize": 60,
              "paddingBottom": 5,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "hsl(100,100%,75%)",
              "fontFamily": "RobotoBold",
              "fontSize": 15,
            }
          }
        >
          Obsoletion
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "position": "relative",
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#23485D",
            "height": 3,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "hsl(100,100%,75%)",
            "borderRadius": 50,
            "height": 20,
            "left": "undefined%",
            "position": "absolute",
            "width": 20,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C1C1C",
          "borderRadius": 5,
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          1
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
           Owners
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          -
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          0
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
           Ex-Owners
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 5,
            "width": "75%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            Battery dead
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            40.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            5.50 Years
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            Screen broke
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            20.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            31.02 Years
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            New reason
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            20.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            0.00 Years
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            New reason 2
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            20.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            0.00 Years
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C1C1C",
          "borderRadius": 5,
          "marginTop": "2%",
          "opacity": 1,
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
      testID="touchableOpacity"
    >
      <Text
        style={
          Object {
            "color": "#4790BA",
            "fontFamily": "MontserratRegular",
            "fontSize": 17,
            "textAlign": "center",
          }
        }
      >
        Submit Feedback
      </Text>
    </View>
  </View>
</View>
`;

exports[`Given the Product component When it is rendered with a valid product object and the user has not given feedback yet Then the SnapShot should match the rendered tree 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#23485D",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <MockedComponent />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#152B38",
        "borderRadius": 5,
        "elevation": 8,
        "height": "79%",
        "marginTop": "2%",
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4.65,
        "width": "95%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C1C1C",
          "borderRadius": 5,
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 23,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "borderRadius": 4,
            "height": 125,
            "marginRight": "5%",
            "width": 125,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#152B38",
            "flexDirection": "column",
            "marginLeft": "5%",
            "width": "35%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "hsl(100,100%,75%)",
              "fontFamily": "RobotoBold",
              "fontSize": 60,
              "paddingBottom": 5,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "hsl(100,100%,75%)",
              "fontFamily": "RobotoBold",
              "fontSize": 15,
            }
          }
        >
          Obsoletion
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "position": "relative",
          "width": "90%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#23485D",
            "height": 3,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "hsl(100,100%,75%)",
            "borderRadius": 50,
            "height": 20,
            "left": "5%",
            "position": "absolute",
            "width": 20,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C1C1C",
          "borderRadius": 5,
          "marginTop": "2%",
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          1
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
           Owners
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          -
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          0
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "RobotoBold",
              "fontSize": 15,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
           Ex-Owners
        </Text>
      </View>
      <View
        style={
          Object {
            "marginTop": 5,
            "width": "75%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            Battery dead
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            40.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            5.50 Years
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            Screen broke
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            20.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            31.02 Years
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            New reason
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            20.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            0.00 Years
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 5,
            }
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            New reason 2
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            20.0 %
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
               -   
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            in
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
             
          </Text>
          <Text
            style={
              Object {
                "fontFamily": "MontserratRegular",
                "fontSize": 15,
              }
            }
          >
            0.00 Years
          </Text>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1C1C1C",
          "borderRadius": 5,
          "marginTop": "2%",
          "opacity": 1,
          "paddingBottom": 15,
          "paddingTop": 15,
          "width": "95%",
        }
      }
      testID="touchableOpacity"
    >
      <Text
        style={
          Object {
            "color": "#4790BA",
            "fontFamily": "MontserratRegular",
            "fontSize": 17,
            "textAlign": "center",
          }
        }
      >
        Submit Feedback
      </Text>
    </View>
  </View>
</View>
`;
